Update AdminController.java